Remove token route, change to internal package. Update spec accordingly
